--- a/index.html
+++ b/index.html
@@ -38,9 +38,10 @@
 
    <section id="first-article">
       <div>
-         <h2>Sweetheart's Affair</h2>
-
+         <article>
+         <h1>Sweetheart's Affair</h1>
          <h3>Limited edition</h3> 
+
          <p>Red Velvet Cupcake, Peanut Butter Kiss and Chocolate Chip</p>
    
          <p>$55.00</p>
@@ -49,6 +50,7 @@
    
          <p>Whether you're craving a classic favorite or eager to embark on a culinary journey, this trio has something for everyone. So go ahead, treat yourself to the ultimate cookie dough experience and discover pure bliss in every spoonful!
          </p> 
+      </article>
       </div>
       <a class="btn" href="" aria-label="Add product to cart">Add to cart</a>
    </section>
@@ -58,7 +60,7 @@
    <Section id="Behind-the-dough">
       <div class="grid-2">
          <article>   
-            <h4>Behind The Dough</h4>
+            <h2>Behind The Dough</h2>
 
             <p>Here's the scoop from Doughp's founder on how this flavor came to be: "I first made Red Velvet on a total whim, just a few months into business in 2017. One day, while mixing up Doughp at our original commercial kitchen in Oakland, I left to grab some lunch at a nearby bakery.</p>
 
@@ -73,17 +75,17 @@
 
    <section id="Comments">
       <div class="grid-3">
-         <h4>What people are saying</h4>
+         <h2>What people are saying</h2>
 
-         <p> <q>"It’s just so Doughp! I didn’t know what to expect, but I am so addicted now. Every flavor was delicious and I honestly can’t wait to try even more!"
-         </q> </p>
+         <p> "It’s just so Doughp! I didn’t know what to expect, but I am so addicted now. Every flavor was delicious and I honestly can’t wait to try even more!"
+          </p>
          <cite>Andrew J.</cite>
             
-         <p><q>"Great product. Absolutely loved Doughp. Tasted great, came quickly and I love a good cause. Was happy I chose the four pack so that I could try a few flavors."
-         </q> </p>
+         <p>"Great product. Absolutely loved Doughp. Tasted great, came quickly and I love a good cause. Was happy I chose the four pack so that I could try a few flavors."
+          </p>
          <cite>Emely W.</cite>
 
-         <p><q>"Life changing! This is something you absolutely need to indulge in. Our entire family is obsessed."</q> </p>
+         <p>"Life changing! This is something you absolutely need to indulge in. Our entire family is obsessed." </p>
          <cite>Ana S.</cite>
 
       </div>
@@ -91,25 +93,25 @@
 
    <section id="Try-it-with">
       <div>
-         <h4>Try it with...</h4>
+         <h2>Try it with...</h2>
    
    
          <div class="grid-4">
             <img src="images/ride-or-die.webp" alt="ride-or-die">
-            <h5>Ride or Die</h5> 
-            <p>$17.00</p>
+            <!-- <h5>Ride or Die</h5> 
+            <p>$17.00</p> -->
 
             <img src="images/brownie-beast.webp" alt="brownie-beast">
-            <h5>Brownie Beast</h5> 
-            <p>$17.00</p>
+            <!-- <h5>Brownie Beast</h5> 
+            <p>$17.00</p> -->
 
             <img src="images/cookie-monsta.webp" alt="cookie-monsta">
-            <h5>Cookie Monsta</h5> 
-            <p>$17.00</p>
+            <!-- <h5>Cookie Monsta</h5> 
+            <p>$17.00</p> -->
 
             <img src="images/smores.webp" alt="smores">
-            <h5>Want S'more?</h5> 
-            <p>$17.00</p>
+            <!-- <h5>Want S'more?</h5> 
+            <p>$17.00</p> -->
          
          </div>
 
